<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Rhythm24Fragment">-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:shrinkColumns="*">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate_label" />

        <TextView
            android:id="@+id/heartRateField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_label" />

        <TextView
            android:id="@+id/batteryLevelField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportmode_label" />

        <Spinner
            android:id="@+id/sportModeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white" />
<!--android:spinnerMode="dialog" -->
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/readSportModeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:text="@string/readSportMode_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/updateSportModeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setSportMode_label"
            android:textAllCaps="false" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoneOneTwo_label" />

        <EditText
            android:id="@+id/zoneOneTwoBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoneTwoThree_label" />

        <EditText
            android:id="@+id/zoneTwoThreeBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoneThreeFour_label" />

        <EditText
            android:id="@+id/zoneThreeFourBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoneFourFive_label" />

        <EditText
            android:id="@+id/zoneFourFiveBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:maxLength="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/readZonesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/readZoneValues_label"
            android:textAllCaps="false" />
        <!--android:maxLines="1"-->

        <Button
            android:id="@+id/updateZonesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateZoneValues_label"
            android:textAllCaps="false" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/viewFitFilesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewFitFiles_label"
            android:textAllCaps="false" />

    </TableRow>
</TableLayout>